add:changes all folder

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -25,57 +25,75 @@
                     </ul>
                 </nav>        
         </header>
-        <section>
-            <div>   
-                <h1>Engage more users & supercharge your landing conversion rates</h1> 
-                <p>Launch your campaign and benefit from our expertise on designing and managing conversion centered landing pages.</p>  
-            </div>
-            <div>
-                <section class="form-container">
-                    <h3>Start Your 30-Day Free Trial</h3>
-                    <form>
-                        <div class="field-input">
-                            <label> Your Name</label>
-                            <input type="tesxt" />
-                        </div>
-                        <div class="field-input">
-                            <label>Email Adress</label>
-                            <input type="email" />
-                        </div>
-                        <div class="field-input">
-                            <label>Password</label>
-                            <input type="password" />
-                        </div>
-                        <div>
-                            <button class="btn-primary">GET FREE TRIAL NOW</button>
-                        </div>
-                        <P><small></small>Hurry up, limited time offer</P>
-                    </form>
-                </section>
+        <section >
+            <div class="container_1">
+                <div class="paragraph">  
+                    <div>
+                    <h1>Engage more users & supercharge your landing conversion rates</h1>
+                    </div> 
+                    <div>
+                    <p>Launch your campaign and benefit from our expertise on designing and managing conversion centered landing pages.</p> 
+                    </div>   
+                </div>
+                <div class="form_user">
+                    <section class="form-container">
+                        <h3>Start Your 30-Day Free Trial</h3>
+                        <form>
+                            <div class="field-input">
+                                <label> Your Name</label>
+                                <input type="tesxt" />
+                            </div>
+                            <div class="field-input">
+                                <label>Email Adress</label>
+                                <input type="email" />
+                            </div>
+                            <div class="field-input">
+                                <label>Password</label>
+                                <input type="password" />
+                            </div>
+                            <div>
+                                <button class="btn-primary">GET FREE TRIAL NOW</button>
+                            </div>
+                            <P><small></small>Hurry up, limited time offer</P>
+                        </form>
+                    </section>
+                </div>
             </div>
         </section>
     </div>
-    <div>
-        <section>
+    <section>
+        <div class="title2">
             <h1>We design your landing page to get high convertion rates</h1>
-        </section>
-          <div>
-            <section>
+        </div>
+          <div class="container3">
+            <div>
+                <div class="imagen">
                 <img src="imagenes\Img1.png" />
+                </div>
+                <div>
                 <h3>Start your campaign</h3>
                 <p>Highly targeted landing pages will increase your results, and optimization with A/B testing takes you to the next level.</p>
-            </section>
-            <section>
+                </div>
+            </div>
+            <div>
+                <div class="imagen">
                 <img src="imagenes\Img2.png" />
+                </div>
+                <div>   
                 <h3>Engage new users</h3>
                 <p>Higher conversion rates means you get more business from your cur rent traffic and reduce cost per cost per acquisition.</p>
-            </section>
-            <section>
+                </div>
+            </div>
+            <div >
+                <div class="imagen">
                 <img src="imagenes\\Img3.png" />
+                </div>  
+                <div>
                 <h3>Claim your reward</h3>
                 <p>Stop wasting money on more traffic. Get more leads on your existing traffic instead. At the end, this improves your ROI significantly.</p>
-            </section>
+                </div>
+            </div>
           </div>
-    </div>
+     </section>
 </body>
 </html>
